--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,6 +6,6 @@
     <hr>
 <div class="row">
         <div class="col-xs-12">
-        <app-recipe-item *ngFor="let item of recipes; let i=index" [recipeItem]="item" (click)="toDisplayDetails(item)"></app-recipe-item>
+        <app-recipe-item *ngFor="let item of recipes; let i=index" [recipeItem]="item" ></app-recipe-item>
     </div>
   </div>
